fixed dates, aligned social icons

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,19 +101,27 @@ a:visited{
   margin-bottom: 50px;
 }
 
-.left-box2 {
-  transform: translateY(-2px);
+.left-box1 .boxNav{
+  transform: translateY(2px);
 }
+
+/* .left-box2 {
+  transform: translateY(-2px);
+} */
 .left-box2 button{
   transform: translateY(1px);
 }
 
 .left-box3 {
-  transform: translateY(-2px);
+  transform: translateY(-1px);
 }
 
 .left-box4{
   transform: translateY(-3px);
+}
+
+.footright {
+  transform: translateY(2px);
 }
 
 .boxText{
@@ -121,8 +129,10 @@ a:visited{
 }
 
 .boxTitle{
+  transform: translateY(2px);
+  letter-spacing: 1px;
   color: #D6805E;
-  font-size: small;
+  font-size: 11px;
   font-weight: bold;
 }
 .boxHeadline{
@@ -141,6 +151,7 @@ a:visited{
   padding: 0;
 }
 .boxButton{
+  transform: translateY(2px);
   padding: 10px 20px 12px 15px;
   font-size: 11px;
   font-weight:bold;
